frontend/test/should_fail/index_exec_mm_min_max_edge2.grg
#using "index_min_max_size_model.gm"

rule ric {
	n:N -e:E-> n;
	
	modify {
	---
		exec( {{ maxEdgeFromIndex(ic) in edgesFromIndex(bari) }} );
	}
}
